[package]
name = "apk-disguise-pro"
version = "0.1.0"
description = "APK Disguise Pro - 一键改包名绕过安装限制"
authors = ["wuhao"]
edition = "2021"

[lib]
name = "apk_disguise_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
zip = "2"
tempfile = "3"
tauri-plugin-fs = "2"
